<resources>
    <string name="app_name">TU-Orgnzr</string>
    <string name="action_settings">Settings</string>
    <string name="GiveUsername">Give your Username</string>
    <string name="GivePassword">Give your password</string>
    <string name="Usn_Hint">Username</string>
    <string name="Psw_Hint">Password</string>
    <string name="LogIn_Ask">Please Log In</string>
    <string name="LogIn_Button_Text">Log In</string>
    <string name="title_activity_profile_">Profile Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Save_Button_Text">Save</string>
    <string name="GreetMessage">"Greetings, %1$s"</string>
    <string-array name="Subjects">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
        <item>test4</item>
        <item>test5</item>
    </string-array>
    <string-array name="WeekDays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="Days_Of_Month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="Buildings">
        <item>Building 1</item>
        <item>Building 2</item>
        <item>Building 3</item>
        <item>Building 4</item>
        <item>Building 5</item>
        <item>Building 10</item>
        <item>Building 12</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Change_ButtonText">Change</string>
    <string name="Weather_res">Today the day is:</string>
</resources>
