<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.androidprojects.tudevs.tu_orgnzr.MainActivity">

    <!-- Adding Header -->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#33cc33"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogIn_Ask"
            android:textSize="30dp"></TextView>

    </LinearLayout>

    <!-- Main Part -->

    <LinearLayout
        android:id="@+id/main_part"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GiveUsername"
            android:textColor="#33cc33"
            android:textSize="40dp"></TextView>

        <EditText
            android:id="@+id/Username_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/Usn_Hint"
            android:inputType="text"
            android:textSize="35dp"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GivePassword"
            android:textColor="#33cc33"
            android:textSize="40dp"></TextView>

        <EditText
            android:id="@+id/Password_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/Psw_Hint"
            android:inputType="text"
            android:textSize="35dp">

        </EditText>

        <Button
            android:id="@+id/Log_In_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogIn_Button_Text"
            android:textColor="#33cc33"
            android:textSize="25dp" />
    </LinearLayout>


</LinearLayout>
